http/firefox: version 30.0

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-06-10 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 30.0, SECURITY_PATCH++
+
 2014-04-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 29.0
 	* DEPENDS: depend on nss 3.16
