--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,4 +1,7 @@
-2014-06-055 Treeve Jelbert <treeve@sourcemage.org>
+2014-06-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.19.1
+
+2014-06-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.19
 
 2014-04-22 Vlad Glagolev <stealth@sourcemage.org>
