--- a/devel/cmake/HISTORY
+++ b/devel/cmake/HISTORY
@@ -1,3 +1,6 @@
+2014-06-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0.0
+
 2014-01-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.8.12.2
 
