xcb-util-renderutil: => 0.3.9

--- a/xorg-app/xcb-util-renderutil/HISTORY
+++ b/xorg-app/xcb-util-renderutil/HISTORY
@@ -1,2 +1,5 @@
+2014-06-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.3.9
+
 2011-12-26 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, DEPENDS: spell created, version 0.3.8
