--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,9 @@
+2014-06-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, 
+	  gcc-4.8-filename-output.patch,
+	  gcc-4.9.0-upstream_fixes-1.patch,
+	  gcc-4.9-tree-ssa-threadedge.patch: add bugfixes from upstream
+
 2014-04-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.9.0
 
