gnu/gcc: use gcc 4.9 based ada bootstrapper for x86_64

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -3,6 +3,7 @@
 	  gcc-4.8-filename-output.patch,
 	  gcc-4.9.0-upstream_fixes-1.patch,
 	  gcc-4.9-tree-ssa-threadedge.patch: add bugfixes from upstream
+	* DETAILS: use gcc 4.9 based ada bootstrapper for x86_64
 
 2014-04-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.9.0
