gnu/gcc: use ecj.jar if building java compiler

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -4,6 +4,7 @@
 	  gcc-4.9.0-upstream_fixes-1.patch,
 	  gcc-4.9-tree-ssa-threadedge.patch: add bugfixes from upstream
 	* DETAILS: use gcc 4.9 based ada bootstrapper for x86_64
+	* BUILD, DETAILS, PRE_BUILD: download and use ecj.jar
 
 2014-04-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.9.0
