--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -5,6 +5,8 @@
 	  gcc-4.9-tree-ssa-threadedge.patch: add bugfixes from upstream
 	* DETAILS: use gcc 4.9 based ada bootstrapper for x86_64
 	* BUILD, DETAILS, PRE_BUILD: download and use ecj.jar
+	* BUILD, CONFIGURE, DEPENDS, DETAILS, PRE_BUILD:
+	  add option for building the cloog-isl optimizer
 
 2014-04-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.9.0
