gnu/gcc: add dependencies on libxt, libx11, libxproto if building awt

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -7,6 +7,8 @@
 	* BUILD, DETAILS, PRE_BUILD: download and use ecj.jar
 	* BUILD, CONFIGURE, DEPENDS, DETAILS, PRE_BUILD:
 	  add option for building the cloog-isl optimizer
+	* DEPENDS: add dependencies on libxt, libx11 and libxproto if
+	  building awt
 
 2014-04-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.9.0
