--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -9,6 +9,7 @@
 	  add option for building the cloog-isl optimizer
 	* DEPENDS: add dependencies on libxt, libx11 and libxproto if
 	  building awt
+	* BUILD: build libquadmath if building with support for fortran
 
 2014-04-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.9.0
