gnu/gcc: filter -pipe from cflags

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -10,6 +10,7 @@
 	* DEPENDS: add dependencies on libxt, libx11 and libxproto if
 	  building awt
 	* BUILD: build libquadmath if building with support for fortran
+	* BUILD: filter -pipe from CFLAGS
 
 2014-04-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.9.0
