gnu/gcc: fix breakage in construction of OPTS

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,6 @@
+2014-06-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: fix breakage in construction of OPTS
+
 2014-06-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, 
 	  gcc-4.8-filename-output.patch,
