--- a/archive/lzip/HISTORY
+++ b/archive/lzip/HISTORY
@@ -1,3 +1,7 @@
+2014-06-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.15
+	* CONFLICTS: deleted, not true
+
 2011-09-30 George Sherwood <gsherwood@sourcemage.org>
 	* DETAILS: Updated to version 1.12
 
