--- a/disk/ddrescue/HISTORY
+++ b/disk/ddrescue/HISTORY
@@ -1,3 +1,8 @@
+2014-06-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.18.1
+	* DEPENDS: added, for lzip
+	* PRE_BUILD: added
+
 2012-06-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.16
 
