gnu/gcc: fix dependency on xproto

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,5 +1,6 @@
 2014-06-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: fix breakage in construction of OPTS
+	* DEPENDS: fix dependency on xproto
 
 2014-06-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, 
