--- a/libs/libusb/HISTORY
+++ b/libs/libusb/HISTORY
@@ -1,3 +1,6 @@
+2014-0615 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.19
+
 2014-04-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: depend on UDEV instead of udev
 
