--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,6 @@
+2014-06-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.12
+
 2014-03-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.10
 	  SECURITY_PATCH++, fixes CVE-2014-0333
