--- a/database/mariadb/HISTORY
+++ b/database/mariadb/HISTORY
@@ -1,3 +1,6 @@
+2014-06-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.5.38 (5.5 branch)
+
 2014-05-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.5.37 (5.5 branch); added mirror for 5.5
 	  branch; cleaned up
