--- a/audio-drivers/alsa-utils/HISTORY
+++ b/audio-drivers/alsa-utils/HISTORY
@@ -1,3 +1,6 @@
+2014-06-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.28
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.27.2
 
