--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,6 @@
+2014-06-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.69
+
 2014-05-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.68
 
