--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2014-06-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.4.0
+
 2014-04-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.3.2
 
