--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-18 Vlad Glagolev <stealth@sourcemage.org>
+	* utils/gstopwatch: new spell, simple stopwatch, written in GTK3
+
 2014-06-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* fonts-x11/ttf-monofur: new spell, a monospace font
 
