--- a/archive/p7zip/HISTORY
+++ b/archive/p7zip/HISTORY
@@ -1,3 +1,6 @@
+2014-06-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
