--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,6 @@
+2014-06-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.11
+
 2014-05-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.3.10
 
