--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,7 @@
+2014-06-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.4.2
+	* PRE_BUILD, gcc-4.9.patch: not needed
+
 2014-06-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, PRE_BUILD: add compiler-rt
 	* DETAILS: use signed tarball for lldb
