--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-20  Treeve Jelbert <treeve@sourcemage.org>
+	* accounts, group: add inpu
+
 2014-06-18 Vlad Glagolev <stealth@sourcemage.org>
 	* utils/gstopwatch: new spell, simple stopwatch, written in GTK3
 
