--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,3 +1,7 @@
+2014-06-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8
+	* PRE_BUILD: create 'input' group
+
 2014-06-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7
 
