--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,6 @@
+2014-06-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.7.7
+
 2013-11-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.7.6
 	* python.gpg: add 18ADD4FF Benjamin Peterson <benjamin@python.org>
