--- a/audio-libs/liblo/HISTORY
+++ b/audio-libs/liblo/HISTORY
@@ -1,3 +1,8 @@
+2014-06-21 Vlad Glagolev <stealth@sourcemage.org>
+	* PRE_BUILD: added, to apply patch
+	* pre-gcc48.patch: added, to fix build with compilers with full C++11
+	  support
+
 2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.28
 
