--- a/audio-creation/ardour3/HISTORY
+++ b/audio-creation/ardour3/HISTORY
@@ -1,3 +1,9 @@
+2014-06-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.5.380; switched back to sourcemage url;
+	  added 2nd mirror
+	* BUILD: merge OPTS
+	* DEPENDS: made --freedesktop optional
+
 2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.5.357
 	* BUILD: add --configdir and --freedesktop to OPTS
