--- a/libs/tzdata/HISTORY
+++ b/libs/tzdata/HISTORY
@@ -1,3 +1,8 @@
+2014-06-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2014e
+	  use upstream signature
+	* iana.gpg: aded 62AA7E34 "Paul Eggert <eggert@cs.ucla.edu>
+
 2014-03-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2014a
 
