--- a/devel/qxmledit/HISTORY
+++ b/devel/qxmledit/HISTORY
@@ -1,3 +1,6 @@
+2014-06-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.10
+
 2014-01-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.9.
 
