--- a/net/iw/HISTORY
+++ b/net/iw/HISTORY
@@ -1,3 +1,6 @@
+2014-06-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.15
+
 2013-12-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.13
 
