--- a/libs/tbb/HISTORY
+++ b/libs/tbb/HISTORY
@@ -1,3 +1,6 @@
+2014-06-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 42_20140601
+
 2014-06-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 42_20140416
 
