--- a/utils/schroot/HISTORY
+++ b/utils/schroot/HISTORY
@@ -1,3 +1,6 @@
+2014-06-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.6.10
+
 2013-01-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.5
 	* BUILD: fix link with latest gettext
