--- a/perl-cpan/dbi/HISTORY
+++ b/perl-cpan/dbi/HISTORY
@@ -1,3 +1,7 @@
+2014-06-22  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.631
+	  new url
+
 2013-11-11  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.630
 
