devel/android-tools: new spell, tools for debugging android-based devices

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* devel/android-tools: new spell, tools for debugging android-based
+	  devices
+
 2014-06-20  Treeve Jelbert <treeve@sourcemage.org>
 	* accounts, group: add inpu
 
