devel/android-tools: set device permissions in udev rule file if systemd is not installed

--- a/devel/android-tools/HISTORY
+++ b/devel/android-tools/HISTORY
@@ -1,3 +1,5 @@
 2014-06-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, init.d/adb, DEPENDS, INSTALL, PRE_BUILD: spell created
+	* PRE_BUILD: if systemd is not installed, explicitly set permissions
+	  in udev rules file
 
