--- a/crypto/gnupg-exp/HISTORY
+++ b/crypto/gnupg-exp/HISTORY
@@ -1,3 +1,6 @@
+2014-06-25 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.24, SECURITY_PATCH=8
+
 2014-06-03 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.23
 
