--- a/editors/auctex/HISTORY
+++ b/editors/auctex/HISTORY
@@ -1,5 +1,9 @@
+2014-06-24 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 11.87
+	* DEPENDS: needs texlive-texmf
+
 2009-09-24 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
-	 * DEPENDS: switch from tetex to texlive [auto]
+	* DEPENDS: switch from tetex to texlive [auto]
 
 2007-05-01 Pieter Lenaerts <e-type@sourcemage.org>
 	* DETAILS: updated to 11.84
