--- a/latex/xdvi/HISTORY
+++ b/latex/xdvi/HISTORY
@@ -1,3 +1,7 @@
+2014-06-25 Ismael Luceno <ismael@sourcemage.org>
+	* INSTALL: create /usr/share/dvips/config/
+	* DETAILS: updated spell to 22.86
+
 2009-08-06 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
 	* PROVIDES: added XDVI
 
