auctex: Move to the emacs-lisp section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-25 Ismael Luceno <ismael@sourcemage.org>
+	* editors/auctex: moved to emacs-lisp/auctex
+
 2014-06-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* devel/android-tools: new spell, tools for debugging android-based
 	  devices
