--- a/gnome2-apps/homebank/HISTORY
+++ b/gnome2-apps/homebank/HISTORY
@@ -1,3 +1,6 @@
+2014-06-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.6; quoting paths
+
 2014-05-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.5.6; cleaned up
 	* DEPENDS: added missing dependencies
