--- a/xorg-lib/libinput/HISTORY
+++ b/xorg-lib/libinput/HISTORY
@@ -1,3 +1,7 @@
+2014-06-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.0
+	  new url
+
 2014-06-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.3.0
 
