--- a/smgl/simpleinit-msb/HISTORY
+++ b/smgl/simpleinit-msb/HISTORY
@@ -1,3 +1,9 @@
+2014-06-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* PRE_BUILD: apply patch
+	* simpleinit-poweroff.patch: added, to fix critical segfault on invoking
+	  from Xen (as a guest HVM DomU)
+
 2011-05-12 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Apply simpleinit-ftbfs-define-enoictlcmd.patch
 	* simpleinit-ftbfs-define-enoictlcmd.patch: Define ENOIOCTLCMD for
