--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2014-06-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.0.2
+
 2014-06-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.1
 
