--- a/python-pypi/fdb/HISTORY
+++ b/python-pypi/fdb/HISTORY
@@ -1,3 +1,6 @@
+2014-06-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.1
+
 2013-06-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4
 
