--- a/python-pypi/sqlalchemy/HISTORY
+++ b/python-pypi/sqlalchemy/HISTORY
@@ -1,3 +1,6 @@
+2014-06-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.6
+
 2014-03-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.4
 
