kernels/kmod: updated to 18

--- a/kernels/kmod/HISTORY
+++ b/kernels/kmod/HISTORY
@@ -1,3 +1,6 @@
+2014-06-25 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 18
+
 2014-05-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 17
 	* DEPENDS: add optional PYTHON
