--- a/net/pptp-linux/HISTORY
+++ b/net/pptp-linux/HISTORY
@@ -1,3 +1,14 @@
+2014-06-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.8.0; converted to upstream pgp signature
+	  check; quoting paths; cleaned up
+	* DEPENDS: added missing dependency: iproute2
+	* BUILD: fixed ip binary path
+	* PRE_BUILD: added, to apply patch
+	* options.patch: added, to prevent options file from trashing on
+	  non-castfs systems
+	* pptp.gpg: added, AE2466C0 public key (James Cameron
+	  <quozl@us.netrek.org>) imported
+
 2008-09-29 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: updated VERSION to 1.7.2
 
