xf86-video-ati: => 7.4.0

--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,7 @@
+2014-06-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version 7.4.0
+	* DEPENDS: all versions need glamor
+
 2014-05-23 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: SCM branch depends on glamor
 	* DEPENDS, DETAILS, PREPARE, PRE_BUILD: Use prepare_select_branch
