--- a/audio-soft/easytag/HISTORY
+++ b/audio-soft/easytag/HISTORY
@@ -1,3 +1,6 @@
+2014-06-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.3
+
 2014-06-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.2; fixed short desc; don't do useless
 	  doc'ing
