--- a/gnome2-apps/homebank/HISTORY
+++ b/gnome2-apps/homebank/HISTORY
@@ -1,3 +1,6 @@
+2014-06-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.6.1
+
 2014-06-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.6; quoting paths
 
