--- a/gnome2-libs/gdk-pixbuf2/HISTORY
+++ b/gnome2-libs/gdk-pixbuf2/HISTORY
@@ -1,3 +1,6 @@
+2014-06-29 Treeve Jelbert <treeve@sourcemage.org>
+	*  DETAILS: version 2.30.8
+
 2014-01-05 Treeve Jelbert <treeve@sourcemage.org>
 	*  DETAILS: version 2.30.2
 
