--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,8 @@
+2014-06-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.30 (stable); SECUIRTY_PATCH++
+	  (CVE-2014-3981, CVE-2014-0207, CVE-2014-3478, CVE-2014-3479,
+	  CVE-2014-3480, CVE-2014-3487, CVE-2014-4049, CVE-2014-3515)
+
 2014-05-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.29 (stable); SECUIRTY_PATCH++
 	  (CVE-2014-0238, CVE-2014-0237)
