--- a/perl-cpan/finance-quote/HISTORY
+++ b/perl-cpan/finance-quote/HISTORY
@@ -1,3 +1,6 @@
+2014-06-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.35
+
 2009-12-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.17
 
