--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2014-06-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.21 (devel)
+
 2014-06-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.20 (devel)
 
