--- a/graphics/shotwell/HISTORY
+++ b/graphics/shotwell/HISTORY
@@ -1,3 +1,8 @@
+2014-06-27 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: depends on rest
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 0.18.0
+
 2013-04-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.14.1
 
