--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,7 @@
+2014-06-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* mozconfig: add --enable-profile-guided-optimization, this is
+	  how upstream builds their releases
+
 2014-06-10 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 30.0, SECURITY_PATCH++
 
