--- a/disk/libisofs/HISTORY
+++ b/disk/libisofs/HISTORY
@@ -1,3 +1,6 @@
+2014-06-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.8
+
 2014-03-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.6
 
