archive/lz4: new spell, a very fast lossless compression algorithm

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* archive/lz4: new spell, a very fast lossless compression algorithm
+
 2014-06-25 Ismael Luceno <ismael@sourcemage.org>
 	* editors/auctex: moved to emacs-lisp/auctex
 
