new spell -libodfgen

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-06-29  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/librevenge: WordPerfect Document importer
+	* libs/libodfgen: ODF generator, originally by Javier Vasquez
 
 2014-06-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* archive/lz4: new spell, a very fast lossless compression algorithm
