--- a/libs/libwpd/HISTORY
+++ b/libs/libwpd/HISTORY
@@ -1,3 +1,8 @@
+2014-06-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.10.0
+	  new url, libreoffice.org
+	* DEPENDS: add librevenge, doxygen,zlib
+
 2012-05-31 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.9.4
 
