--- a/libs/libwpg/HISTORY
+++ b/libs/libwpg/HISTORY
@@ -1,3 +1,8 @@
+2014-06-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.3.0
+	  new url libreoffice.org
+	* DEPENDS: add librevenge, doxygen, pkgconfig
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
