--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,7 @@
+2014-06-30 Pol Vinogradov <vin.public@gmail.com>
+	* PRE_BUILD, 0002-4.8.0-ffast-math.patch: removed the patch, causes
+	  undefined reference to fxsave
+
 2014-06-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: fix breakage in construction of OPTS
 	* DEPENDS: fix dependency on xproto
