--- a/crypto/gnupg/HISTORY
+++ b/crypto/gnupg/HISTORY
@@ -1,3 +1,6 @@
+2014-06-30 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.4.18
+
 2014-06-23 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.17, SECURITY_PATCH=11
 
