gnome2-libs/glib2: version 2.41.1

--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,6 @@
+2014-07-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.41.1
+
 2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
 	* PRE_BUILD: do not use autogen.sh, use autoreconf
 	  do not disable gdbus-codegen, it is needed by gtk+3
