--- a/x11-toolkits/gtk+3/HISTORY
+++ b/x11-toolkits/gtk+3/HISTORY
@@ -1,3 +1,6 @@
+2014-07-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.13.3
+
 2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.12.2
 
