--- a/archive/burp/HISTORY
+++ b/archive/burp/HISTORY
@@ -1,3 +1,6 @@
+2014-07-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.16 (devel)
+
 2014-03-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: devel -> stable; stable -> legacy; added 1.4.10 version as
 	  devel branch
