lighttpd: added libev optional dependency

--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,6 @@
+2014-07-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added libev optional dependency
+
 2014-03-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.35; SECURITY_PATCH++
 	  (CVE-2014-2323, CVE-2014-2324)
