FUNCTIONS: Add get_scm_version function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-02 Ismael Luceno <ismael@sourcemage.org>
+	* FUNCTIONS: Added get_scm_version function
+
 2014-06-29  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/librevenge: WordPerfect Document importer
 	* libs/libodfgen: ODF generator, originally by Javier Vasquez
