--- a/archive-libs/lzo/HISTORY
+++ b/archive-libs/lzo/HISTORY
@@ -1,3 +1,7 @@
+2014-07-02 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Install libraries to the root directory, lzo is used by some
+	  system tools.
+
 2014-06-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.07, SECURITY_PATCH++, fixes CVE-2014-4607
 
