--- a/archive-libs/lzo/HISTORY
+++ b/archive-libs/lzo/HISTORY
@@ -1,4 +1,5 @@
 2014-07-02 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.08
 	* BUILD: Install libraries to the root directory, lzo is used by some
 	  system tools.
 
