--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-03 Ismael Luceno <ismael@sourcemage.org>
+	* FUNCTIONS: Fix get_up_spell_name to handle the dot and plus symbols
+
 2014-07-02 Ismael Luceno <ismael@sourcemage.org>
 	* FUNCTIONS: Added get_scm_version function
 
