--- a/net/pppd-chldap/HISTORY
+++ b/net/pppd-chldap/HISTORY
@@ -1,4 +1,5 @@
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
+	* PREPARE: Use prepare_select_branch
 	* DETAILS: Use get_scm_version
 
 2013-05-21 Vlad Glagolev <stealth@sourcemage.org>
