FUNCTIONS: more fixes to recent changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-03 Pol Vinogradov <vin.public@gmail.com>
+	* FUNCTIONS: more fixes to get_up_spell_name and get_scm_version
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* FUNCTIONS: Fix get_up_spell_name to handle the dot and plus symbols
 
