x11-libs/cairo: added scm branch

--- a/x11-libs/cairo/HISTORY
+++ b/x11-libs/cairo/HISTORY
@@ -1,3 +1,7 @@
+2014-07-04 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS, PRE_BUILD, PREPARE, PRE_BUILD, PRE_SUB_DEPENDS,
+	  REPAIR^all^PRE_SUB_DEPENDS, SUB_DEPENDS: added scm branch
+
 2013-09-12 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.12.16
 
