--- a/utils/dbus-mono/HISTORY
+++ b/utils/dbus-mono/HISTORY
@@ -1,3 +1,6 @@
+2014-07-04 Ismael Luceno <ismael@sourcemage.org>
+	* PREPARE: Use prepare_select_branch
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
