--- a/python-pypi/cherrypy/HISTORY
+++ b/python-pypi/cherrypy/HISTORY
@@ -1,3 +1,6 @@
+2014-07-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.5.0 (3)
+
 2014-04-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated 3rd branch to 3.3.0
 
