--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-07-05  Ismael Luceno <ismael@sourcemage.org>
+	* devel/gnusim8085: new spell, Graphical simulator, assembler and
+	  debugger for the Intel 8085 microprocessor
+
 2014-07-03 Pol Vinogradov <vin.public@gmail.com>
 	* FUNCTIONS: more fixes to get_up_spell_name and get_scm_version
 
