python: download site ssl certificate does not verify

--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,7 @@
+2014-07-06 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS: python website always forwards to https now and the
+	           certificate doesn't seem to verify
+
 2014-06-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.7.7
 
