--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,7 @@
+2014-07-06 Vlad Glagolev <stealth@sourcemage.org>
+	* PRE_BUILD: apply patch
+	* libxml29.patch: added, to fix compiling for legacy branch
+
 2014-06-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.30 (stable); SECUIRTY_PATCH++
 	  (CVE-2014-3981, CVE-2014-0207, CVE-2014-3478, CVE-2014-3479,
