--- a/lua-forge/lua51/HISTORY
+++ b/lua-forge/lua51/HISTORY
@@ -1,3 +1,7 @@
+2014-07-06 Remko van der Vossen <wich@sourcemage.org>
+	* patch-src_Makefile: shared object was not linked
+	                      to libraries properly
+
 2013-02-17 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 5.1.5
 	* PRE_BUILD: changed to add the -lm -ldl to LDFLAGS
