--- a/lua-forge/lua/HISTORY
+++ b/lua-forge/lua/HISTORY
@@ -1,3 +1,6 @@
+2014-07-06 Remko van der Vossen <wich@sourcemage.org>
+	* shared.patch: link with libm.so
+
 2013-12-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.2.3
 
