--- a/devel/bin86/HISTORY
+++ b/devel/bin86/HISTORY
@@ -1,3 +1,7 @@
+2014-07-06 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 0.16.21
+
 2013-02-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.16.19, updated WEB_SITE
 
