--- a/utils/xen/HISTORY
+++ b/utils/xen/HISTORY
@@ -1,3 +1,7 @@
+2014-07-06 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4.4.0
+	* PRE_BUILD: Run the subdirs' configure scripts
+
 2013-10-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.1.6.1; SECURITY_PATCH++
 
