xen: Run the configure script, it runs subdirs in turn

--- a/utils/xen/HISTORY
+++ b/utils/xen/HISTORY
@@ -1,3 +1,6 @@
+2014-07-07 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD, PRE_BUILD: Run the configure script, it runs subdirs in turn
+
 2014-07-06 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 4.4.0
 	* PRE_BUILD: Run the subdirs' configure scripts
