--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,7 @@
+2014-07-07 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS, DEPEMDS, DOWNLOAD, PRE_BUILD: git -> bzr, converted to cmake
+	  build system completely
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
