--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,4 +1,8 @@
 2014-06-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/kernels/3.15.4, latest.defaults,
+	  info/patches/maintenance_patches_3/patch-3.15.4: version 3.15.4
+
+2014-06-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/kernels/3.15.2, latest.defaults,
 	  info/patches/maintenance_patches_3/patch-3.15.2: version 3.15.2
 	* DETAILS: SECURITY_PATCH++, fixes CVE-2014-4611 and CVE-2014-4608
