--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,6 @@
+2014-07-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.8.6, SECURITY_PATCH=11
+
 2014-06-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.4
 	  SECURITY++, fixes CVE-2014-3477
