--- a/net/traceroute/HISTORY
+++ b/net/traceroute/HISTORY
@@ -1,3 +1,7 @@
+2014-07-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 2.0.20
+
 2013-12-06 Tommy Boatman <tboatman@sourcemage.org>
 	* DETAILS: 2.0.19
 
