autopair: new spell, Automagically pair braces and quotes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-07-09  Ismael Luceno <ismael@sourcemage.org>
+	* emacs-lisp/autopair: new spell, Automagically pair braces and
+	  quotes
+
 2014-07-05  Ismael Luceno <ismael@sourcemage.org>
 	* devel/gnusim8085: new spell, Graphical simulator, assembler and
 	  debugger for the Intel 8085 microprocessor
