visual-regexp: new spell, A regexp/replace command for Emacs with interactive visual feedback

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 2014-07-09  Ismael Luceno <ismael@sourcemage.org>
+	* emacs-lisp/visual-regexp: new spell, A regexp/replace command for
+	  Emacs with interactive visual feedback
 	* emacs-lisp/autopair: new spell, Automagically pair braces and
 	  quotes
 
