--- a/science/qlandkarte-gt/HISTORY
+++ b/science/qlandkarte-gt/HISTORY
@@ -1,3 +1,6 @@
+2014-07-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.7.7
+
 2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.7.6
 
