--- a/fonts-x11/unifont/HISTORY
+++ b/fonts-x11/unifont/HISTORY
@@ -1,3 +1,8 @@
+2014-07-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version 7.0.03
+	  use GNU_URL
+	* PRE_BUILD: do not unzip
+
 2014-04-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS version 6.3.20140214
 
