--- a/devel/extra-cmake-modules/HISTORY
+++ b/devel/extra-cmake-modules/HISTORY
@@ -1,3 +1,6 @@
+2014-07-10  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.0
+
 2014-06-05  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.0.14/4.10.0
 
