--- a/gnome2-apps/galculator/HISTORY
+++ b/gnome2-apps/galculator/HISTORY
@@ -1,3 +1,6 @@
+2014-07-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.1.3; switched to hash check
+
 2012-12-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0.1
 	  fixed long description wrap
