--- a/libs/libvdpau/HISTORY
+++ b/libs/libvdpau/HISTORY
@@ -1,3 +1,6 @@
+2014-07-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8
+
 2013-08-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7
 
