--- a/xorg-lib/libxi/HISTORY
+++ b/xorg-lib/libxi/HISTORY
@@ -1,3 +1,6 @@
+2014-07-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.3
+
 2013-07-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.2
 	  SECURITY_PATCH=1
