--- a/graphics-libs/mesalib-1x/HISTORY
+++ b/graphics-libs/mesalib-1x/HISTORY
@@ -1,3 +1,6 @@
+2014-07-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 10.2.3
+
 2014-06-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 10.2.2
 
