--- a/net/whois/HISTORY
+++ b/net/whois/HISTORY
@@ -1,3 +1,6 @@
+2014-07-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 5.1.4
+
 2014-01-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.1.1
 
