gnarwl: added optional patch to allow usage of $time variable that returns current time in days since 1 Jan 1970

--- a/mail/gnarwl/HISTORY
+++ b/mail/gnarwl/HISTORY
@@ -1,2 +1,8 @@
+2014-07-11 Vlad Glagolev <stealth@sourcemage.org>
+	* CONFIGURE: added, for patch option
+	* PRE_BUILD: apply patch
+	* time.patch: added, to allow usage of $time variable that returns
+	  current time in days since 1 Jan 1970
+
 2014-02-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS, {PRE_,}BUILD, INSTALL, excluded: spell created
