--- a/http/serf/HISTORY
+++ b/http/serf/HISTORY
@@ -1,3 +1,6 @@
+2014-07-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.6
+
 2014-04-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.4
 	* DEPENDS: add scons, remove old options
