--- a/shell-term-fm/st/HISTORY
+++ b/shell-term-fm/st/HISTORY
@@ -1,3 +1,6 @@
+2014-07-11 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.5
+
 2013-11-21 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Add missing dependencies
 
