http/webkitgtk: updated to 2.4.4

--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2014-07-12 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 2.4.4
+
 2014-06-05 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: 2.4.3
 	* BUILD: added missing header fix
