--- a/crypto/p11-kit/HISTORY
+++ b/crypto/p11-kit/HISTORY
@@ -1,3 +1,6 @@
+2014-07-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.20.3
+
 2013-04-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.18.1
 
