--- a/gnome3-libs/gcr/HISTORY
+++ b/gnome3-libs/gcr/HISTORY
@@ -1,3 +1,6 @@
+2014-07-12 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.12.2
+
 2013-05-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.8.2
 
