--- a/shell-term-fm/st/HISTORY
+++ b/shell-term-fm/st/HISTORY
@@ -1,3 +1,7 @@
+2014-07-12 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD, patches/st-0.5-hidexcursor.diff:
+	  Add patch to hide X cursor when typing.
+
 2014-07-11 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.5
 
