mpg123: bump to 1.20.1

--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2014-07-12 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated spell to 1.20.1
+
 2014-05-26 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 1.20.0
 
