--- a/graphics-libs/jpeg/HISTORY
+++ b/graphics-libs/jpeg/HISTORY
@@ -1,3 +1,7 @@
+2014-07-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 9a
+	* UP_TRIGGERS: corrected library version detection
+
 2012-02-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 8d
 
