mail/claws-mail: version 3.10.1

--- a/mail/claws-mail/HISTORY
+++ b/mail/claws-mail/HISTORY
@@ -1,3 +1,6 @@
+2014-07-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.10.1
+
 2014-05-27 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 3.10.0, fixed SOURCE_URL, .bz2 -> .xz
 	* DEPENDS: removed db
