doc/man-pages: version 3.70

--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,6 @@
+2014-07-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.70
+
 2014-06-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.69
 
