--- a/libs/libfm/HISTORY
+++ b/libs/libfm/HISTORY
@@ -1,3 +1,7 @@
+2014-07-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.1; don't do useless doc'ing
+	* DEPENDS: added missing optional dependencies
+
 2014-02-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.2.0, gz -> xz
 
