--- a/shell-term-fm/pcmanfm/HISTORY
+++ b/shell-term-fm/pcmanfm/HISTORY
@@ -1,3 +1,7 @@
+2014-07-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.1
+	* DEPENDS: handle gtk+2/3 dependency
+
 2014-02-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.2.0, gz -> xz
 
