--- a/chat-irc/bitlbee/HISTORY
+++ b/chat-irc/bitlbee/HISTORY
@@ -1,3 +1,6 @@
+2014-07-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.2.2
+
 2014-03-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.2.1; quoting paths; fixed short desc
 	* CONFIGURE: readability++; moved libpurple-exclusive plugins to
