emacs: Depedency for SVG support is on librsvg2

--- a/editors/emacs/HISTORY
+++ b/editors/emacs/HISTORY
@@ -1,3 +1,6 @@
+2014-07-16 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Depedency for SVG support is on librsvg2
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
