--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,9 @@
+2014-07-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.9.1
+	* PRE_BUILD, gcc-4.9-tree-ssa-threadedge.patch,
+	  gcc-4.9.0-upstream_fixes-1.patch: remove obsolete patches
+	* BUILD: fix paths to bootstrap compiler
+
 2014-06-30 Pol Vinogradov <vin.public@gmail.com>
 	* PRE_BUILD, 0002-4.8.0-ffast-math.patch: removed the patch, causes
 	  undefined reference to fxsave
