--- a/devel/vala/HISTORY
+++ b/devel/vala/HISTORY
@@ -1,3 +1,6 @@
+2014-07-16 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: 0.24.0
+
 2013-05-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.20.1
 
