--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,10 @@
+2014-07-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.16.0
+	* CONFLICTS: added, for glamor
+	* CONFIGURE: query for glamor support
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: add glamor support
+	* DEPENDS: add libepoxy, optional wayland, nettle
+
 2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
