xf86-video-ati - glamor now comes from xorg-serve

--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,6 @@
+2014-07-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: glamor now comes from xorg-server
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
