--- a/xorg-app/weston/HISTORY
+++ b/xorg-app/weston/HISTORY
@@ -1,3 +1,6 @@
+2014-06-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add optional libinput
+
 2014-05-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5.0
 	* DEPENDS: mesalib => MESALIB
