--- a/python-pypi/bpython/HISTORY
+++ b/python-pypi/bpython/HISTORY
@@ -1,3 +1,6 @@
+2014-07-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.13.1
+
 2014-05-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.13
 	* DEPENDS: added curtsies suggest dependency
