--- a/shell-term-fm/mksh/HISTORY
+++ b/shell-term-fm/mksh/HISTORY
@@ -1,3 +1,6 @@
+2014-07-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to R50
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to R48b
 
