--- a/xorg-lib/libxi/HISTORY
+++ b/xorg-lib/libxi/HISTORY
@@ -1,3 +1,6 @@
+2014-07-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.4
+
 2014-07-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.3
 
