--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2014-7-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.2
+
 2014-07-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.0.1
 
