--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2014-07-18 Sukneet Basuta <sukneet@sourcemage.org>
+	* CONFIGURE: missed an 'a' in 'disable-glamor'
+
 2014-07-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.16.0
 	* CONFLICTS: added, for glamor
