kernels/linux: version 3.15.6

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-07-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/kernels/3.15.6, latest.defaults,
+	  info/patches/maintenance_patches_3/patch-3.15.6: version 3.15.6
+
 2014-07-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/kernels/3.15.5, latest.defaults,
 	  info/patches/maintenance_patches_3/patch-3.15.5: version 3.15.5
