--- a/net/tsocks/HISTORY
+++ b/net/tsocks/HISTORY
@@ -1,3 +1,6 @@
+2014-07-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+
 2008-01-23 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: PATCHLEVEL++ to install extra scripts
 	* INSTALL: Install socks inspection and configuration syntax check scripts
