--- a/net/tor/HISTORY
+++ b/net/tor/HISTORY
@@ -1,3 +1,6 @@
+2014-07-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: versions 0.2.4.22, 0.2.5.4-alpha
+
 2012-12-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.2.3.25; SECURITY_PATCH++ (CVE-2012-5573)
 
