--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* net/tor.gpg: add 63FEE659
+
 2014-07-09  Ismael Luceno <ismael@sourcemage.org>
 	* emacs-lisp/visual-regexp: new spell, A regexp/replace command for
 	  Emacs with interactive visual feedback
