net/vidalia: version 0.2.21

--- a/net/vidalia/HISTORY
+++ b/net/vidalia/HISTORY
@@ -1,3 +1,6 @@
+2014-07-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.2.21
+
 2010-10-20 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 0.2.10
 	  fixed WEB_SITE
