--- a/utils/coreutils/HISTORY
+++ b/utils/coreutils/HISTORY
@@ -1,3 +1,6 @@
+2014-07-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 8.23
+
 2013-12-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 8.22
 
