--- a/net/libreswan/HISTORY
+++ b/net/libreswan/HISTORY
@@ -1,3 +1,7 @@
+2014-07-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.9
+	* no-pam.patch: removed, fixed by upstream
+
 2014-05-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS, CONFLICTS, {PRE_,}BUILD, libreswan.gpg,
 	  init.d/ipsec, no-pam.patch: created the spell
