shell-term-fm/busybox: version 1.22.1

--- a/shell-term-fm/busybox/INSTALL
+++ b/shell-term-fm/busybox/INSTALL
@@ -1,4 +1,5 @@
-install  -vm  755  busybox  ${INSTALL_ROOT}/sbin
+install  -vm  755  busybox  ${INSTALL_ROOT}/sbin &&
+install  -vDm 644 .config ${INSTALL_ROOT}/usr/share/busybox/busybox.config
 
 #
 #  This one is needed only when symlinks needed ...
