--- a/python-pypi/xlrd/HISTORY
+++ b/python-pypi/xlrd/HISTORY
@@ -1,3 +1,6 @@
+2014-07-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.3
+
 2013-04-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.2
 	* DEPENDS: fix python3 usage
