--- a/python-pypi/cython/HISTORY
+++ b/python-pypi/cython/HISTORY
@@ -1,3 +1,6 @@
+2014-07-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.20.2
+
 2014-03-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.20.1
 
