--- a/python-pypi/rbtools/HISTORY
+++ b/python-pypi/rbtools/HISTORY
@@ -1,3 +1,6 @@
+2014-07-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.6.2
+
 2014-03-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.5.7
 	  spell created
