--- a/python-pypi/cffi/HISTORY
+++ b/python-pypi/cffi/HISTORY
@@ -1,3 +1,6 @@
+2014-07-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.6
+
 2014-04-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.2
 
