--- a/disk/brasero/HISTORY
+++ b/disk/brasero/HISTORY
@@ -1,3 +1,8 @@
+2014-07-22 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  fixed WEB_SITE
+	  updated spell to 3.11.3
+
 2012-04-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.4.0
 
