--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2014-07-22 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.16.3
+
 2014-06-10 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 3.16.1
 
