--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2014-07-22 Treeve Jelbert <treeve@sourcemage.org>
+	* PRE_BUILD: fix 3.16 aptching
+
 2014-07-22 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.16.3
 
