--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2014-07-22 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 31.0
+
 2014-06-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* mozconfig: add --enable-profile-guided-optimization, this is
 	  how upstream builds their releases
