--- a/x11-toolkits/gtk+2/HISTORY
+++ b/x11-toolkits/gtk+2/HISTORY
@@ -1,3 +1,6 @@
+2014-07-22 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.24.24
+
 2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.24.22
 
