--- a/graphics-libs/opencv/HISTORY
+++ b/graphics-libs/opencv/HISTORY
@@ -1,3 +1,6 @@
+2014-07-22 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.4.9
+
 2014-01-31 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 2.4.8
 
