--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-22 Ladislav Hagara <hgr@vabo.cz>
+	* graphics/nomacs: new spell, image viewer
+
 2014-07-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* net/tor.gpg: add 63FEE659
 
