--- a/utils/gnuplot/HISTORY
+++ b/utils/gnuplot/HISTORY
@@ -1,3 +1,7 @@
+2014-07-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.6.5
+	* PRE_BUILD, gnuplot-4.6.2-texinfo-5.patch: remove obsolete patch
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
