--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,7 @@
+2014-07-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, BUILD, CONFIGURE, PRE_BUILD, Makefile.in-pgo.patch:
+	  add option for profiled build
+
 2014-07-22 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 31.0
 
