--- a/python-pypi/sqlalchemy/HISTORY
+++ b/python-pypi/sqlalchemy/HISTORY
@@ -1,3 +1,6 @@
+2014-07-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.7
+
 2014-06-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.6
 
