--- a/python-pypi/chardet/HISTORY
+++ b/python-pypi/chardet/HISTORY
@@ -1,3 +1,6 @@
+2014-07-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.2.1
+
 2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: PYTHON
 
