--- a/python-pypi/jinja2/HISTORY
+++ b/python-pypi/jinja2/HISTORY
@@ -1,3 +1,6 @@
+2014-07-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.7.3
+
 2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.7.2
 	  SECURITY_PATCH=1
