--- a/xorg-lib/libxext/HISTORY
+++ b/xorg-lib/libxext/HISTORY
@@ -1,3 +1,6 @@
+2014-07-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.3
+
 2013-06-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.2
 	  SECURITY_PATCH=1 fixes CVE-2013-1982
