--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,7 @@
+2014-07-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 3.2.16
+	* DEPENDS: add gettext, remove lzo
+
 2014-06-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: versions 3.1.25 and 3.2.15, SECURITY_PATCH++, fixes
 	  CVE-2014-3466
