--- a/mail/exim/HISTORY
+++ b/mail/exim/HISTORY
@@ -1,5 +1,18 @@
+2014-07-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.83; SECURITY_PATCH++
+	* exim.gpg: added 04D29EBA public key (Todd Lyons (Exim Maintainer)
+	  <tlyons@exim.org>)
+	* ldap-tlsopt.patch: dropped, fixed by upstream
+
 2014-04-28 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFIGURE: fixed priority for gdbm
+
+2014-01-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* PRE_BUILD: apply patch
+	* ldap-tlsopt.patch: backported official patch that fixes LDAP over
+	  TLS/SSL lookups (5428a9463ae1080029a84a1b33e4a8a6915c5f28)
+	* init.d/exim: changed permissions to 755
 
 2012-12-09 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFLICTS: added msmtp
