--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-24  Treeve Jelbert <treeve@sourcemage.org>
+	* docutils: moved to python-pypi section
+
 2014-07-22 Ladislav Hagara <hgr@vabo.cz>
 	* graphics/nomacs: new spell, image viewer
 
