--- a/python-pypi/docutils/HISTORY
+++ b/python-pypi/docutils/HISTORY
@@ -1,3 +1,9 @@
+2014-07-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.12
+	* DEPENDS: use  $SECTION_DIRECTORY/PY_DEPENDS
+	* BUILD, INSTALL: deleted
+	  spell moved to python section
+
 2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.11
 
