--- a/ftp/rsync/HISTORY
+++ b/ftp/rsync/HISTORY
@@ -1,3 +1,6 @@
+2014-07-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.1.1
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
