--- a/archive/burp/HISTORY
+++ b/archive/burp/HISTORY
@@ -1,3 +1,6 @@
+2014-07-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.18 (devel); readability++
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
