--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,4 +1,7 @@
-2014-7-12 Treeve Jelbert <treeve@sourcemage.org>
+2014-07-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.23 (devel)
+
+2014-07-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.22 (devel)
 
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
