gcc - small fix for FINAL

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,6 @@
+2014-07-25 Treeve Jelbert <treeve@sourcemage.org>
+	* FINAL: use default_final
+
 2014-07-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.9.1
 	* PRE_BUILD, gcc-4.9-tree-ssa-threadedge.patch,
