gnome3-libs/granite: new spell, elementary Development Library

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-25 Pol Vinogradov <vin.public@gmail.com>
+	* gnome3-libs/granite: new spell, elementary Development Library
+
 2014-07-24  Treeve Jelbert <treeve@sourcemage.org>
 	* docutils: moved to python-pypi section
 
