--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -1,3 +1,6 @@
+2014-07-25 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Fix typo
+
 2014-01-28 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated devel version to 3.0.0
 	* DEPENDS: updated depends, commented out currently broken backends
