--- a/xorg-app/xdpyinfo/HISTORY
+++ b/xorg-app/xdpyinfo/HISTORY
@@ -1,3 +1,6 @@
+2014-07-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.3.1
+
 2011-02-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.2.0
 
