--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,6 @@
+2014-07-27 Pol Vinogradov <vin.public@gmail.com>
+	* PRE_BUILD: fixed building with gobject-introspection
+
 2014-07-07 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS, DEPEMDS, DOWNLOAD, PRE_BUILD: git -> bzr, converted to cmake
 	  build system completely
