--- a/graphics/argyllcms/HISTORY
+++ b/graphics/argyllcms/HISTORY
@@ -1,3 +1,6 @@
+2014-07-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.6.3
+
 2013-07-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.5.1
 	* 04_CVE-2012-4405.diff, argyllcms-1.4.0-jpeg.patch, PRE_BUILD:
