python-pypi/meson-0.18.0 new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-28  Treeve Jelbert <treeve@sourcemage.org>
+	* python-pypi/meson: new spell, advanced build system
+
 2014-07-25 Pol Vinogradov <vin.public@gmail.com>
 	* gnome3-libs/granite: new spell, elementary Development Library
 
