--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-07-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/kernels/3.15.7, latest.defaults,
+	  info/patches/maintenance_patches_3/patch-3.15.7: version 3.15.7
+
 2014-07-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/kernels/3.15.6, latest.defaults,
 	  info/patches/maintenance_patches_3/patch-3.15.6: version 3.15.6
