--- a/utils/youtube-dl/HISTORY
+++ b/utils/youtube-dl/HISTORY
@@ -1,3 +1,6 @@
+2014-07-28 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2014.07.25.1
+
 2014-03-20 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 2014.03.18.1
 
