--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,3 +1,6 @@
+2014-07-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.4.56
+
 2014-07-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.4.55
 
