--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2014-07-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.4.2
+
 2014-06-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.4.0
 
