--- a/video/minitube/HISTORY
+++ b/video/minitube/HISTORY
@@ -1,3 +1,8 @@
+2014-07-30 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.2
+	* PRE_BUILD, 0001-remove-reference-to-missing-translations.patch:
+	  removed
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
