gnarwl: fixed blacklist functioning

--- a/mail/gnarwl/HISTORY
+++ b/mail/gnarwl/HISTORY
@@ -1,3 +1,8 @@
+2014-07-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* PRE_BUILD: apply patch
+	* blacklist.patch: added, to fix blacklist functioning
+
 2014-07-11 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFIGURE: added, for patch option
 	* PRE_BUILD: apply patch
