--- a/security/fwknop/HISTORY
+++ b/security/fwknop/HISTORY
@@ -1,3 +1,6 @@
+2014-07-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.6.3
+
 2014-04-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.6.2
 
