--- a/archive/tar/HISTORY
+++ b/archive/tar/HISTORY
@@ -1,3 +1,7 @@
+2014-07-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.28
+	* PRE_BUILD, glibc215.patch: deleted
+
 2012-12-08 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: added, to apply the patch
 	* glibc215.patch: added, to fix build with glibc >=2.15
