--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,3 +1,8 @@
+2014-08-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.8.6, SECURITY_PATCH=6
+	* PRE_BUILD, boost.patch: patch removed
+	* PRE_BUILD, CVE-2014-0190.patch: security patch from Arch added
+
 2013-07-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: Apply boost.patch
