hatta: added pygments suggest dep

--- a/python-pypi/hatta/HISTORY
+++ b/python-pypi/hatta/HISTORY
@@ -1,3 +1,6 @@
+2014-08-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added pygments suggest dep
+
 2014-08-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* PRE_BUILD: apply patch
