--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,6 @@
+2014-08-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: updated to 3.1
+
 2014-07-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.0.2
 
