--- a/net/proxychains-ng/HISTORY
+++ b/net/proxychains-ng/HISTORY
@@ -1,2 +1,5 @@
+2014-08-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.8.1
+
 2014-04-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, INSTALL: created spell
