ChangeLog: qmmp-plugin-pack added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-06 Ladislav Hagara <hgr@vabo.cz>
+	* audio-players/qmmp-plugin-pack: new spell, extra plugins for qmmp
+
 2014-07-28  Treeve Jelbert <treeve@sourcemage.org>
 	* python-pypi/meson: new spell, advanced build system
 
