--- a/audio-players/deadbeef/HISTORY
+++ b/audio-players/deadbeef/HISTORY
@@ -1,3 +1,7 @@
+2014-08-06 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.6.2
+	* PRE_BUILD, libzip.patch: removed
+
 2014-04-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.6.1; updated descriptions
 
