openssl: => 1.0.1i (1.0), 0.9.8zb (0.9) [security]

--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,9 @@
+2014-08-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.1i (branch 1.0), 0.9.8zb (branch 0.9);
+	  SECURITY_PATCH++ (9 CVEs)
+	* openssl.gpg: imported 0E604491 public key (Matt Caswell
+	  <matt@openssl.org>)
+
 2014-06-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell (branch 1.0) to 1.0.1h, (branch 0.9) to
 	  0.9.8za; SECURITY_PATCH++ (7 CVEs)
