--- a/mail/exim/HISTORY
+++ b/mail/exim/HISTORY
@@ -1,3 +1,6 @@
+2014-08-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.84
+
 2014-07-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.83; SECURITY_PATCH++
 	* exim.gpg: added 04D29EBA public key (Todd Lyons (Exim Maintainer)
