mesalib-1x: install GL headers and libs to correct path for smgl-gl_select

--- a/graphics-libs/mesalib-1x/HISTORY
+++ b/graphics-libs/mesalib-1x/HISTORY
@@ -1,3 +1,7 @@
+2014-08-11 Sukneet Basuta <sukneet@sourcemage.org>
+	* PRE_BUILD, gl_select.patch: added to install GL headers and libs
+	  to correct path for smgl-gl_select
+
 2014-08-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 10.2.5
 
