utils/dialog: added option for shared library

--- a/utils/dialog/INSTALL
+++ b/utils/dialog/INSTALL
@@ -1,1 +1,5 @@
-make install DESTDIR="$INSTALL_ROOT"
+make install DESTDIR="$INSTALL_ROOT" &&
+
+if [[ $DIALOG_SO == "--with-shared" ]]; then
+  cp dialog.h dlg_config.h $INSTALL_ROOT/usr/include
+fi
