--- a/utils/dialog/HISTORY
+++ b/utils/dialog/HISTORY
@@ -1,3 +1,7 @@
+2014-08-11 Pol Vinogradov <vin.public@gmail.com>
+	* BUILD, CONFIGURE, *SUB_DEPENDS, INSTALL: added option to build
+	  shared library
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2-20130902
 
