disk/whdd: new spell, a HDD diagnostic and recovery tool for Linux

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-11 Pol Vinogradov <vin.public@gmail.com>
+	* disk/whdd: new spell, a HDD diagnostic and recovery tool for Linux
+
 2014-08-06 Ladislav Hagara <hgr@vabo.cz>
 	* audio-players/qmmp-plugin-pack: new spell, extra plugins for qmmp
 
