greylist: added ability to show configured timeout value in defer message

--- a/mail/greylist/HISTORY
+++ b/mail/greylist/HISTORY
@@ -1,3 +1,8 @@
+2014-08-12 Vlad Glagolev <stealth@sourcemage.org>
+	* CONFIGURE: added, to configure timeout patch applying
+	* PRE_BUILD: apply patch
+	* timeout.patch: added, to show configured timeout value
+
 2013-06-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* PRE_BUILD: apply patch
