--- a/python-pypi/trac-ldapplugin/HISTORY
+++ b/python-pypi/trac-ldapplugin/HISTORY
@@ -1,3 +1,6 @@
+2014-08-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7.0; updated mirror url
+
 2010-12-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=2
 	* PRE_BUILD: apply the patch
