--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.41.2
+
 2014-07-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.41.1
 
