graphics/inkscape: version 0.48.5

--- a/graphics/inkscape/HISTORY
+++ b/graphics/inkscape/HISTORY
@@ -1,3 +1,6 @@
+2014-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.48.5
+
 2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: depends only on specific boost lib and headers (iostreams)
 	* INSTALL: added, to fix multijob install
