klick: bump to 0.12.2

--- a/audio-creation/klick/HISTORY
+++ b/audio-creation/klick/HISTORY
@@ -1,3 +1,7 @@
+2014-08-15 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to 0.12.2
+	* DEPENDS: rubberband
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
