php: => 5.3.29 (previous) [security]

--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,6 @@
+2014-08-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.3.29 (previous); SECURITY_PATCH++
+
 2014-07-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.31 (stable)
 
