gtklick: bump to 0.6.4

--- a/python-pypi/gtklick/HISTORY
+++ b/python-pypi/gtklick/HISTORY
@@ -1,2 +1,5 @@
+2014-08-14 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to 0.6.4
+
 2008-12-13 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
