unhash: depends SSL

--- a/crypto/unhash/HISTORY
+++ b/crypto/unhash/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-02-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.1, tgz -> tar.bz2, updated WEB_SITE and SOURCE_URL[0]
 
