dar: depends SSL

--- a/archive/dar/HISTORY
+++ b/archive/dar/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-04-20 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 2.4.5
 
