xchat: depends SSL

--- a/chat-irc/xchat/HISTORY
+++ b/chat-irc/xchat/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-05-24 Vlad Glagolev <stealth@sourcemage.org>
 	* 0001-fix-build-with-glib-version-2.32.patch: corrected the patch
 	  to fix compilation with static spelling support
