libmsn: depends SSL

--- a/chat-libs/libmsn/HISTORY
+++ b/chat-libs/libmsn/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-06-23 Sukneet Basuta <sukneet@sourcemage.org>
 	* PRE_BUILD: added, apply gcc-4.7 patch
 	* gcc-4.7.patch: added, fix compilation on gcc 4.7
