openldap: depends SSL

--- a/collab/openldap/HISTORY
+++ b/collab/openldap/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.39
 
