btpd: depends SSL

--- a/ftp/btpd/HISTORY
+++ b/ftp/btpd/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-08-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.16; renewed source url
 
