curl: depends SSL

--- a/ftp/curl/HISTORY
+++ b/ftp/curl/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2013-12-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 7.34.0
 	 SECURITY_PATCH++, fix CVE-2013-4545
