ctorrent: depends SSL

--- a/ftp/ctorrent/HISTORY
+++ b/ftp/ctorrent/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-05-13 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Switched to Enhanced CTorrent, mentioned by CTorrent's current
 	  non-maintainer
