wget: depends SSL

--- a/ftp/wget/HISTORY
+++ b/ftp/wget/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2014-01-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.15
 	* PRE_BUILD, wget-1.14-perl-5.18-pod-fixes.diff: deleted
