rb-libtorrent: depends SSL

--- a/ftp-libs/rb-libtorrent/HISTORY
+++ b/ftp-libs/rb-libtorrent/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2012-06-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.16.1
 
