dclib: depends SSL

--- a/ftp-libs/dclib/HISTORY
+++ b/ftp-libs/dclib/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-12-23 Pol Vinogradov <vin.public@gmail.com>
 	* DEPENDS: added openssl
 	* PRE_BUILD, dclib-openssl-1.patch: added to build with openssl 1.0
