mail-notification: depends SSL

--- a/gnome2-apps/mail-notification/HISTORY
+++ b/gnome2-apps/mail-notification/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-04-06 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 5.3
 	* BUILD, INSTALL: added for new build system
