gnome-python2: depends SSL

--- a/gnome2-libs/gnome-python2/HISTORY
+++ b/gnome2-libs/gnome-python2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-12-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: added dependencies on atk, bzip2, cairo, dbus, dbus-glib, expat,
 	  fontconfig, freetype2, gdk-pixbuf2, glib2, gtk+2, harfbuzz, icu,
