cadaver: depends SSL

--- a/http/cadaver/HISTORY
+++ b/http/cadaver/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-05-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: use DAV subdependency from neon
 	* CONFIGURE: ssl & xml options don't make any sense when system neon
