gwenhywfar2: depends SSL

--- a/libs/gwenhywfar2/HISTORY
+++ b/libs/gwenhywfar2/HISTORY
@@ -1,2 +1,5 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-01-20 George Sherwood <george@beernabeer.com>
 	* DETAILS, DEPENDS, HISTORY, CONFLICTS: Created from gwenhywfar
