libesmtp: depends SSL

--- a/libs/libesmtp/HISTORY
+++ b/libs/libesmtp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-10-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.6
 	* BUILD: removed, not required anymore
