alpine: depends SSL

--- a/mail/alpine/HISTORY
+++ b/mail/alpine/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-01-11 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
 	* DETAILS: update topal to 74
 
