c-client: depends SSL

--- a/mail/c-client/HISTORY
+++ b/mail/c-client/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-08-12 Elisamuel Resto <ryuji@sourcemage.org>
 	* DEPENDS: remove unused enable/disable flags; PATCHLEVEL++
 	* BUILD: use is_depends_enabled instead of the grep; quoted paths,
