imap: depends SSL

--- a/mail/imap/HISTORY
+++ b/mail/imap/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-08-13 Elisamuel Resto <ryuji@sourcemage.org>
 	* CONFIGURE: Only the patch query needs to be here
 	* CONFLICTS: Padding removed; quoting
