dk-milter: depends SSL

--- a/mail/dk-milter/HISTORY
+++ b/mail/dk-milter/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-09-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS, {PRE_}BUILD, CONFIGURE, INSTALL,
 	  init.d/dk-filter{,.conf}: spell created
