opendkim: depends SSL

--- a/mail/opendkim/HISTORY
+++ b/mail/opendkim/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-07-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS, BUILD, CONFIGURE, INSTALL, opendkim.gpg,
 	  init.d/opendkim{,.conf}: spell created
