ssmtp: depends SSL

--- a/mail/ssmtp/HISTORY
+++ b/mail/ssmtp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: add libcrypt to LIBS
 	* PRE_BUILD, 0020_all_from-format-fix.patch,
