fwbuilder: depends SSL

--- a/net/fwbuilder/HISTORY
+++ b/net/fwbuilder/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-12-30 Robert Figura <template@sourcemage.org>
 	* DETAILS: upgrade to 5.0.1.3592
 	* DEPENDS: insert libfwbuilder's dependencies
