ppp: depends SSL

--- a/net/ppp/HISTORY
+++ b/net/ppp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-05-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* CONFIGURE: added selector for IPv6 option
