ssocks: depends SSL

--- a/net/ssocks/HISTORY
+++ b/net/ssocks/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-12-24 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD: Fix LIBS, must include -lcrypto with -lssl
 	* DETAILS: updated spell to 0.0.14
