cherrypy: depends SSL

--- a/python-pypi/cherrypy/HISTORY
+++ b/python-pypi/cherrypy/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-07-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.5.0 (3)
 
