python-ldap: depends SSL

--- a/python-pypi/python-ldap/HISTORY
+++ b/python-pypi/python-ldap/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-08-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.15; added source hints to skip ssl check
 	  on pypi
