thc-pptp-bruter: depends SSL

--- a/security/thc-pptp-bruter/HISTORY
+++ b/security/thc-pptp-bruter/HISTORY
@@ -1,2 +1,5 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2007-01-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS, DEPENDS, BUILD: created spell from Finn Haedicke's template
