--- a/shell-term-fm/x3270/HISTORY
+++ b/shell-term-fm/x3270/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-10-20 Tommy Boatman <tboatman_smgl@live.com>
 	* DETAILS: version 3.3.12ga7
 
