telepathy-qt: depends SSL

--- a/telephony/telepathy-qt/HISTORY
+++ b/telephony/telepathy-qt/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-07-15 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: updated stable version to 0.3.7
 	* DEPENDS: added missing optional deps on telepathy-farsight
