spice-gtk: depends SSL

--- a/utils/spice-gtk/HISTORY
+++ b/utils/spice-gtk/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2013-09-04 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Suggest virt-viewer for a better spice client
 	  See http://spice-space.org/download.html
